--- a/TrelloFramework/test-output/old/Default suite/methods-not-run.html
+++ b/TrelloFramework/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>boards.info.trello.testcases.TestCases.trelloBoardPageCheck</td></tr>
 <tr><td>boards.info.trello.testcases.TestCases.trelloCreateMultipleListAndSwapInCreatedBoard</td></tr>
+<tr><td>boards.info.trello.testcases.TestCases.trelloCreateMultipleListInCreatedBoard</td></tr>
 <tr><td>boards.info.trello.testcases.TestCases.trelloCreateAndDeleteBoard</td></tr>
 <tr><td>boards.info.trello.testcases.TestCases.trelloHomePageCheck</td></tr>
 <tr><td>boards.info.trello.testcases.TestCases.trelloLoginPageCheck</td></tr>
