--- a/TrelloFramework/test-output/old/Default suite/classes.html
+++ b/TrelloFramework/test-output/old/Default suite/classes.html
@@ -4,15 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>boards.info.trello.testcases.TestCases</td>
+<td>boards.info.trello.testcases.TrelloTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>trelloCreateMultipleListInCreatedBoard</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>trelloBoardPageCheck</td>
