--- a/TrelloFramework/test-output/old/Default suite/methods.html
+++ b/TrelloFramework/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61d194">  <td>23/08/27 13:14:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:boards.info.trello.testcases.TestCases@359f7cdf]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/08/27 13:14:41</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.trelloCreateMultipleListInCreatedBoard()[pri:0, instance:boards.info.trello.testcases.TestCases@359f7cdf]">trelloCreateMultipleListInCreatedBoard</td> 
+<tr bgcolor="61d194">  <td>23/08/30 00:50:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:boards.info.trello.testcases.TrelloTestCases@4567f35d]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="61d194">  <td>23/08/30 00:49:18</td>   <td>-45235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod()[pri:0, instance:boards.info.trello.testcases.TrelloTestCases@4567f35d]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/08/30 00:50:02</td>   <td>-930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TrelloTestCases.trelloHomePageCheck()[pri:0, instance:boards.info.trello.testcases.TrelloTestCases@4567f35d]">trelloHomePageCheck</td> 
   <td>main@1510467688</td>   <td></td> </tr>
 </table>
